[tool.poetry]
name = "Sobes"
version = "0.0.1"
description = "Собеседования"
authors = ["Konstantin Klepikov <oformleno@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <4.0"

fastapi = "^0.104.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
loguru = "^0.7.2"
pydantic = "^2.4.2"
PyYAML = "^6.0"
python-multipart = ">=0.0.6,<0.1.0"
aiofiles = "^23.2.1"
pydantic-settings = "^2.5.2"
pydantic-core = "^2.23.4"
annotated-types = "^0.7.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.10"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
# tests
pytest = "^8.3.3"
pytest-asyncio = "^0.21.1"
# lint
flake8 = "^6.1.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.9.16"
flake8-pyproject = "^1.2.3"
pep8-naming = "^0.13.3"
mypy = "^1.13.0"
ruff = "^0.7.2"
types-pyyaml = "^6.0.12.2"
httpx = "^0.25.1"
types-aiofiles = "^23.2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.blue]
line-length = 88
preview = true


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-immutable-calls = ["Depends"]

[tool.ruff]
line-length = 88


[tool.ruff.format]
quote-style = "single"


[tool.mypy]
check_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = ["src", "tests"]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = ["app", "src"]
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = ["venv*", ".venv"]
addopts = "-v -x -s -p no:warnings"
asyncio_mode = "auto"
